clusters/base/apps/smart-home/mosquitto/ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mqtt
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app.kubernetes.io/name: mosquitto
  ports:
    - name: mosquitto-http
      port: 1883
      protocol: TCP
      targetPort: mosquitto-http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mosquitto
  labels:
    app.kubernetes.io/name: mosquitto
  annotations:
    external-dns.alpha.kubernetes.io/hostname: &fqdn mqtt.${DOMAIN}
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - *fqdn
      secretName: mosquitto-cert
  rules:
    - host: *fqdn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mqtt
                port:
                  name: mosquitto-http
